--- a/notifypro/build.gradle
+++ b/notifypro/build.gradle
@@ -6,11 +6,11 @@ plugins {
 
 android {
     namespace 'com.mamon.notifypro'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         minSdk 19
-        targetSdk 32
+        targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -40,15 +40,21 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-
-
     // firebase messaging
     implementation 'com.google.firebase:firebase-messaging-ktx:23.2.0'
-
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+
+    // gson
+    implementation 'com.google.code.gson:gson:2.10.1'
+
+
+//    // dexter
+//    implementation 'com.karumi:dexter:6.2.3'
+
+
 
 }
 
@@ -61,7 +67,7 @@ afterEvaluate {
 
                 groupId = 'com.github.MamonAburawi'
                 artifactId = 'notifyPro'
-                version = '1.0'
+                version = '1.1'
             }
         }
     }
